# DatasetVisualizer

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
config/: column_glossary.yaml  datasets.yaml
docs/: adding-a-dataset.md  backend.md  dataset-system.md  frontend.md  glossary.md  index.md
docs/architecture/: code-map.md  overview.md
docs/audit/: dataset-audit-matrix.md
docs/datasets/: aa_lcr.md  aime_2026.md  arc_agi_2.md  arxivmath.md  browsecomp.md  global_mmlu.md  gpqa_diamond.md  hle.md  livecodebench.md  mcp_atlas.md  mmlu.md  mmlu_pro.md  mmmlu.md  nocha.md  osworld_verified.md  swe_bench.md  tau3_bench.md  terminal_bench_21.md  toolathlon.md
docs/how-to/: add-dataset.md  add-hf-benchmark.md
frontend/: eslint.config.mjs  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx
frontend/app/faq/: page.tsx
frontend/components/: ChartPanel.tsx  ColumnGlossary.tsx  DatasetExplorer.tsx  DatasetPageClient.tsx  DatasetReadme.tsx  DatasetSourceLink.tsx  FaqPage.tsx  FilterPanel.tsx  HomePage.tsx  MarkdownContent.tsx  OverviewTab.tsx  SampleInspector.tsx  Sidebar.tsx  SidebarFaq.tsx
frontend/components/icons/: BrandIcons.tsx
frontend/components/ui/: accordion.tsx  collapsible.tsx
frontend/components/viewers/: AgentBenchViewer.tsx  ArcGridViewer.tsx  ArxivMathViewer.tsx  CodeEvalViewer.tsx  CodeProblemSampleViewer.tsx  CodeProblemViewer.tsx  GaiaViewer.tsx  GenericViewer.tsx  HleViewer.tsx  InstructionViewer.tsx  IssueViewer.tsx  MarkdownMath.tsx  MathViewer.tsx  types.ts  (+11 more)
frontend/lib/: api.ts  catalog-ids.ts  chatml.ts  faq.ts  filterState.ts  mrcr.ts  types.ts  useCatalog.ts  useDatasetQuery.ts
scripts/: audit_datasets.py  build_column_glossary.py  capture_audit_screenshots.py  inspect_dataset.py  scaffold_dataset_viewer.py
src/dataset_visualizer/: __init__.py  app.py  cli.py  compat.py  config.py  dataset_readme.py  pre_download.py  registry.py  row_count.py  row_values.py  server.py  source_links.py
tests/: test_api_service.py  test_app.py  test_benchmark_normalize.py  test_benchmark_registry.py  test_cache.py  test_chart_data.py  test_cli.py  test_column_glossary.py  test_compat.py  test_components_mcq.py  test_config.py  test_dataset_readme.py  test_filters.py  test_generic_overview.py  test_home.py  test_inspect_dataset.py  test_loaders_aa_lcr.py  test_loaders_aime_2026.py  test_loaders_arxivmath.py  test_loaders_browsecomp.py  test_loaders_global_mmlu.py  test_loaders_gpqa.py  test_loaders_hf_benchmark.py  test_loaders_hle.py  test_loaders_livecodebench.py  test_loaders_mmlu.py  test_loaders_mmlu_pro.py  test_loaders_mmmlu.py  test_loaders_nocha.py  test_loaders_osworld_verified.py  test_loaders_swe_bench.py  test_loaders_tau3_bench.py  test_loaders_terminal_bench.py  test_loaders_toolathlon.py  test_math_arena.py  test_mtob_crypto.py  test_overview_policy.py  test_overview_toolathlon.py  test_page_layout.py  test_pre_download.py  (+5 more)
tests/fixtures/: browsecomp_sample.csv  mmlu_sample.json
(+114 files in other folders)
