[project]
name = "dataset-visualizer"
version = "0.1.0"
description = "Interactive Streamlit explorer for Hugging Face benchmark datasets"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=5.0.0",
    "huggingface-hub>=1.0.0",
    "pandas>=2.0.0",
    "plotly>=6.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    "streamlit>=1.58.0",
]

[project.scripts]
dataset-viz = "dataset_visualizer.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dataset_visualizer"]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "ruff>=0.15.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]
extend-exclude = ["notebooks", ".venv"]

[tool.ruff.lint]
select = [
    "E", "F", "W",
    "I",
    "UP",
    "B",
    "SIM",
    "D",
    "PL",
    "RUF",
]
ignore = [
    "D101",
    "D203",
    "D213",
    "PLR0913",
    "RUF001",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["PLR2004", "D103"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
