[project]
name = "dataset-visualizer"
version = "0.1.0"
description = "Interactive explorer for Hugging Face benchmark datasets (Gradio + Next.js)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=5.0.0",
    "gradio>=6.19.0",
    "huggingface-hub>=1.0.0",
    "pandas>=2.0.0",
    "pycryptodome>=3.23.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.0",
]

[project.scripts]
dataset-viz = "dataset_visualizer.cli:main"
pre-download = "dataset_visualizer.pre_download:main"
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dataset_visualizer"]

[dependency-groups]
dev = [
    "playwright>=1.60.0",
    "pytest>=9.0.0",
    "ruff>=0.15.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]
extend-exclude = ["notebooks", ".venv"]

[tool.ruff.lint]
select = [
    "E", "F", "W",
    "I",
    "UP",
    "B",
    "SIM",
    "D",
    "PL",
    "RUF",
]
ignore = [
    "D101",
    "D203",
    "D213",
    "PLR0913",
    "RUF001",
]

[tool.ruff.lint.per-file-ignores]
"src/dataset_visualizer/api/serializers.py" = ["PLR0911"]
"src/dataset_visualizer/api/service.py" = ["E501", "PLR0912", "PLW0108"]
"src/dataset_visualizer/loaders/global_mmlu.py" = ["PLR0911"]
"src/dataset_visualizer/loaders/swe_bench.py" = ["PLR0911"]
"tests/**/*.py" = ["PLR2004", "D103"]
"scripts/**/*.py" = ["D103", "PLR0911", "PLR0912", "PLR2004", "E501", "PLC0415", "RUF059"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "scripts"]
